# check-my-deps

./: pyproject.toml
.github/: dependabot.yaml  renovate.json
